--- a/css/bayza.css
+++ b/css/bayza.css
@@ -226,3 +226,12 @@ footer .instagram a:hover {
 .bg-darkest-est {
     background: #151515!important
 }
+
+img {
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
+img:hover {
+    filter: alpha(opacity=70);
+    opacity: 0.7;
+}
