--- a/css/bayza.css
+++ b/css/bayza.css
@@ -228,6 +228,5 @@ footer .instagram a:hover {
 }
 
 a img:hover {
-    filter: alpha(opacity=80);
-    opacity: 0.8;
+    filter: brightness(125%);
 }
