--- a/css/bayza.css
+++ b/css/bayza.css
@@ -228,5 +228,5 @@ footer .instagram a:hover {
 }
 
 a img:hover {
-    filter: contrast(105%) brightness(115%) drop-shadow(1px 1px 20px black);
+    filter: contrast(105%) brightness(115%) drop-shadow(3px 3px 10px #111111);
 }
