--- a/css/bayza.css
+++ b/css/bayza.css
@@ -228,5 +228,5 @@ footer .instagram a:hover {
 }
 
 a img:hover {
-    filter: contrast(105%) brightness(115%) drop-shadow(8px 8px 10px #131313);
+    filter: contrast(105%) brightness(115%) drop-shadow(7px 7px 5px #00000088);
 }
