--- a/css/bayza.css
+++ b/css/bayza.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 .cabecera {
-    background: linear-gradient(rgba(0, 0, 0, 0.24), rgba(0, 0, 0, 0.24)),url(../images/ahmed_bannerweb.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.24), rgba(0, 0, 0, 0.24)),url(../images/ahmed_bannerweb2.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
