--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -1,129 +1,3 @@
-<html lang="en">
-  <head>
-    <title>Releases | Bayza</title>
-    <!-- Metadatos -->
-    <meta charset="utf-8" />
-    <meta name="theme-color" content="#1d1d1d"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="releases, bounce, music, EDM, dance, deep house, oriental" />
-    <meta name="description" content="All releases."/>
-    
-    <!-- Protocolo Open Graph -->
-    <meta property="url" content="https://bayzamusic.com/releases"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Bayza Music Releases"/>
-    <meta property="og:site_name" content="Bayza"/>
-    <meta property="og:image" content="https://bayzamusic.com/images/logomt-sq-300.jpg"/>
-    <meta property="og:image:alt" content="Bayza cover image"/>
-    <meta property="og:image:width" content="300"/>
-    <meta property="og:image:height" content="300"/>
-    <meta property="og:description" content="All releases"/>
-    
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
-    <meta name="twitter:title" content="Bayza Music Releases">
-    <meta name="twitter:description" content="All releases">
-    <meta name="twitter:site" content="@bayzamusic"/>
-    
-    <!-- Recursos -->
-{% include resources.html %}
-    <link rel="canonical" href="https://bayzamusic.com/releases"/>
-  </head>
-  <body>
-{% include navbar.html %}
-    <!-- Official Releases -->
-    <section id="releases" class="bg-dark">
-      <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
-        <h3 class="mt-5 text-uppercase text-white" data-aos="fade-right">Official Releases</h3>
-        <h4 class="font-weight-light" data-aos="fade-left">by year</h4>
-        <div class="row my-4">
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2021">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2021bayzacom.jpg" alt="Bayza 2021">
-                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2021 Releases</p></small></h5>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2020">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2020">
-                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2020 Releases</p></small></h5>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2019">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019">
-                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2019 Releases</p></small></h5>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2018">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2018bayzacom.jpg" alt="Bayza 2018">
-                  <h5 class="mb-0"><small><p class="mt-2" data-aos="fade-left">2018 Releases</p></small></h5>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all" data-aos="flip-left">See all releases</a>
-      </div>
-    </section>
-    <!-- Bootlegs -->
-    <section id="releases" class="bg-darkest">
-      <div class="container text-secondary text-center py-5" style="overflow-x: hidden;">
-        <h3 class="mt-3 text-uppercase text-white">Bootlegs</h3>
-        <h4 class="font-weight-light">*Special</h4>
-        <div class="row my-4">
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2021-bootlegs">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2021-bootlegsbayzacom.jpg" alt="Bayza 2021 Bootlegs">
-                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2021 Bootlegs/Remixes</p></small></h5>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2020-bootlegs">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2020-bootlegsbayzacom.jpg" alt="Bayza 2020 Bootlegs">
-                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2020 Bootlegs/Remixes</p></small></h5>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3">
-            <div class="item">
-              <div class="cover">
-                <a href="/releases/2019-bootlegs">
-                  <img data-aos="zoom-in" class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/2019-bootlegsbayzacom.jpg" alt="Bayza 2019 Bootlegs">
-                  <h5 class="mb-0" data-aos="fade-left"><small><p class="mt-2">2019 Bootlegs/Remixes</p></small></h5>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a class="btn btn-outline-releases px-4 py-1" href="/releases/all-bootlegs" data-aos="flip-left">See all bootlegs</a>
-      </div>
-    </section>
-{% include footer.html %}
-{% include scripts.html %}
-  </body>
-</html>
+<script>
+  $(location).attr('href','/releases/all')
+</script>
