--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -266,8 +266,8 @@
             In 2021 Bayza is hitting his very first 1M plays on Spotify with his <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Everything I Wanted | Bayza">Everything I Wanted</a></b>'s cover. 
           </p>
           <p data-aos="fade-right">
-            He has currently signed tracks with Records Labels such as "
-            <b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United's Instagram">Bounce United</a></b>, 
+            He has currently signed tracks with Records Labels such as
+            "<b><a href="https://instagram.com/bounceunited" target="_blank" title="Bounce United's Instagram">Bounce United</a></b>, 
             <b><a href="https://www.youtube.com/channel/UCoo_WkQMj2h-WFi7nBQjtyw" target="_blank" title="Miss DeepShine's YouTube Channel">DeepShine Records</a></b>, 
             <b><a href="https://instagram.com/palmtherapysounds" target="_blank" title="Palm Therapy Sounds's Instagram">Palm Therapy Sounds</a></b>, 
             <b><a href="https://instagram.com/onesevenmusic" target="_blank" title="One Seven Music's Instagram">One Seven Music</a></b>, 
